src/styles/VideoPlayer.css
#video-player-container {
  flex: 1;
  max-width: calc(100vw - 270px);
  display: flex;
  flex-direction: column;
}

#video-player {
  overflow: auto;
  flex: 1;
}

#video-container {
  position: relative;
  display: inline-block;
  border-bottom: 1px solid #34495e;
  border-right: 1px solid #34495e;
}

#video-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: transparent;
  z-index: 1;
}

#video-player-container:hover #video-overlay {
  display: block;
}

/* Controls */

#controls-panel {
  display: flex;
  flex-direction: column;
  background: #222;
  overflow: hidden;
}

#controls {
  display: flex;
  justify-content: space-between;
}

.controls-section {
  display: flex;
  align-items: center;
  position: relative;
}

#play {
  cursor: pointer;
  font-weight: bold;
}

#time {
  color: #fff;
  margin-right: 10px;
  font-size: 14px;
  margin-left: 0.5rem;
}

#duration {
  height: 20px;
  flex: 1;
  background: #f5f6fa;
  border-top: 1px solid #7f8c8d;
  position: relative;
  overflow: hidden;
}

#currentTime {
  height: inherit;
  background: #e74c3c;
  width: 0px;
}

#duration-line {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  border-right: 1px solid #000;
}

.range-control-slider {
  display: none;
  position: absolute;
  z-index: 100;
  bottom: 100%;
  right: 0;
  padding: 0.5rem 1rem;
  background-color: #222;
}

input[type="range"] {
  cursor: pointer;
}

.range-control-info {
  color: #fff;
  margin-bottom: 0.5rem;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}

.range-control-title {
  font-size: 18px;
  font-weight: 600;
}

#controls button {
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  padding: 3px 5px;
}

#controls .range-control button {
  padding: 3px 10px;
}

#controls button:hover {
  background: rgb(255, 255, 255, 0.2);
}

.range-control:hover .range-control-slider {
  display: block;
}

/* Video Player Scroll */
::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}
::-webkit-scrollbar-track {
  background: #ecf0f1;
}
::-webkit-scrollbar-thumb {
  background: #bdc3c7;
  border-radius: 5px;
}
::-webkit-scrollbar-thumb:hover {
  background: #95a5a6;
}

